# FasTag

./: .gitignore  BOM.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  test.yml  windows.yml
bench/: benchmark.cpp
cmake/eigen3-range-shim/: Eigen3Config.cmake  Eigen3ConfigVersion.cmake
data/taxonomy/: README.md  names.dmp  nodes.dmp  reference-set.tsv
doc/: BACKLOG-ci.md  BACKLOG-mzpeak.md  BACKLOG.md  DESIGN-ondisc-mzpeak.md  OPENMS-FAST-READER.md  RESEARCH-tagger-uses-2021plus.md  SPECIES-DETECTOR.md  TEST-DATA.md
gui/: .gitignore  PLAN.md  README.md  dev.sh  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
gui/scripts/: gen-params.mjs
gui/src/common/: paramLayout.ts  params.generated.json
gui/src/main/: fastag.ts  index.ts  preview.ts  settings.ts  species.ts
gui/src/preload/: index.d.ts  index.ts
gui/src/renderer/: index.html
gui/src/renderer/src/: App.tsx  ParamField.tsx  SpeciesPanel.tsx  env.d.ts  index.css
include/FasTag/: fasta_filter.h  fastag.h  ranksum.h
src/: FasTag.cpp  FasTagger.cpp  FasTagger.h  FastaFilter.cpp  FastaFilter.h  Proforma.h  SpectrumSampler.h  TagRecon.cpp  TagRecon.h  TaxIndex.cpp  TaxIndex.h  TaxStats.cpp  TaxStats.h  buildtaxdb.cpp  tagfeatures.cpp  tagfeatures.h
test/: fasta_filter_test.cpp  fastag_test.cpp  proforma_test.cpp  ranksum_test.cpp  sampler_test.cpp  tagfeatures_test.cpp  tagrecon_test.cpp  taxindex_test.cpp  taxstats_test.cpp
tools/: fetch_reference_set.py  prune_taxdump.py
